--- a/demo.html
+++ b/demo.html
@@ -10,8 +10,8 @@
 </head> 
 <body> 
   <div style="padding:20px"> 
-    <div style="text-align:left";><a href="#" class="ydialog" title="测试" rel="test_panel">test</a></div> 
-    <div style="text-align:left;padding-left:20px;padding-top:10px";><select ID="Select1" NAME="Select1"><option>下拉</option></select>弹出窗口时会将其隐藏，关闭时会让其显示，目的是在IE中防止弹出的DIV挡不住下拉框</div> 
+    <div style="text-align:left"><a href="#" class="ydialog" title="测试" rel="test_panel">test</a></div> 
+    <div style="text-align:left;padding-left:20px;padding-top:10px"><select ID="Select1" NAME="Select1"><option>下拉</option></select>弹出窗口时会将其隐藏，关闭时会让其显示，目的是在IE中防止弹出的DIV挡不住下拉框</div> 
     <div id="test_panel" style='padding:20px 0 20px 0;text-align:center;width:600px;height:200px'>
       <div style='padding:20px 0 20px 0;text-align:center;width:300px'>
         打个酱油，路过。
